--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,7 +31,9 @@ jobs:
           export Platform=${{ matrix.arch }}
           export ROOT_DIR=`cygpath ${workspace}`/..
           export DEPS=${{ matrix.deps }}
-          pacman --noconfirm -S --needed mingw-w64-${{ matrix.arch }}-toolchain tar zstd make
+          pacman --noconfirm -S --needed mingw-w64-${{ matrix.arch }}-toolchain \
+                                         mingw-w64-${{ matrix.arch }}-cmake \
+                                         tar zstd make
           ${ROOT_DIR}/gdl/.ci/build_gdl_windows.msys prep
           ${ROOT_DIR}/gdl/.ci/build_gdl_windows.msys build
       - name: Check GDL
