--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -59,6 +59,7 @@ jobs:
           export ROOT_DIR=`cygpath ${workspace}`/..
           ${ROOT_DIR}/gdl/.ci/build_gdl_windows.msys check || exit 0
       - name: Package GDL
+        shell: msys2 {0}
         run: |
           export Platform=${{ matrix.arch }}
           export ROOT_DIR=`cygpath ${workspace}`/..
