--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,6 +26,8 @@ jobs:
           install: >-
             mingw-w64-${{ matrix.arch }}-toolchain
             mingw-w64-${{ matrix.arch }}-cmake
+            mingw-w64-${{ matrix.arch }}-makensis
+            zip
             tar
             zstd
             make
