--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        deps: [FULL, MINI]
+        deps: [full, mini]
         arch: [x86_64, i686]
     env:
       deps: ${{ matrix.deps }}
