--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         id: cache
         uses: actions/cache@v2
         with:
-          path: ${{ github.workspace }}\..\mingw
+          path: D:\a\gdl\mingw
           key: cache-msys2-gdl-${{ matrix.arch }}-${{ matrix.deps }}
       - name: Prepere MSYS2 Packages
         if: steps.cache.outputs.cache-hit != 'true'
