--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,11 @@ jobs:
         with:
           path: D:\a\gdl\mingw
           key: cache-msys2-gdl-${{ matrix.arch }}-${{ matrix.deps }}
+      - name: Install MSMPI
+        if: ${{ matrix.deps }} == "full"
+        run: |
+          Invoke-WebRequest -Uri https://download.microsoft.com/download/B/2/E/B2EB83FE-98C2-4156-834A-E1711E6884FB/MSMpiSetup.exe -OutFile MSMpiSetup.exe
+          MSMpiSetup.exe -unattend
       - name: Prepere MSYS2 Packages
         if: steps.cache.outputs.cache-hit != 'true'
         shell: msys2 {0}
