--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         uses: msys2/setup-msys2@v2
         with:
           msystem: MSYS
-          update: true
+          update: false
           release: false
           install: >-
             mingw-w64-${{ matrix.arch }}-toolchain
