--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,21 @@ jobs:
             tar
             zstd
             make
+      - name: Setup Python (64 bit)
+        uses: actions/setup-python@v2
+        if: matrix.arch == 'x86_64' && (matrix.deps == 'full-msmpi' || matrix.deps == 'full')
+        with:
+          python-version: '3.x'
+          architecture: x64
+      - name: Setup Python (32 bit)
+        uses: actions/setup-python@v2
+        if: matrix.arch == 'x86_64' && (matrix.deps == 'full-msmpi' || matrix.deps == 'full')
+        with:
+          python-version: '3.x'
+          architecture: x32
+      - name: Install Numpy
+        if: matrix.deps == 'full-msmpi' || matrix.deps == 'full'
+        run: pip install numpy
       - name: Checkout GDL
         uses: actions/checkout@v2
       - name: Cache MSYS2 Packages
