cygpath python path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -835,6 +835,16 @@ if(PYTHON OR PYTHON_MODULE)
         endif()
         find_package(PythonInterp ${PYTHONVERSION})
         find_package(PythonLibs ${PYTHONVERSION})
+        if (PYTHON_VERSION_STRING STREQUAL "" AND NOT PYTHON_EXECUTABLE STREQUAL "" AND MSYS)
+            execute_process(COMMAND cygpath.exe -m "${PYTHON_EXECUTABLE}" OUTPUT_VARIABLE PYTHON_EXECUTABLE_CYGPATH)
+            execute_process(COMMAND "${PYTHON_EXECUTABLE_CYGPATH}" -c "import sys; sys.stdout.write(sys.version)"
+                            OUTPUT_VARIABLE _VERSION
+                            RESULT_VARIABLE _PYTHON_VERSION_RESULT
+                            ERROR_QUIET)
+			if(NOT _PYTHON_VERSION_RESULT)
+				string(REGEX REPLACE " .*" "" PYTHON_VERSION_STRING "${_VERSION}")
+			endif()
+        endif()
         if (NOT PYTHON_VERSION_STRING VERSION_EQUAL PYTHONLIBS_VERSION_STRING)
             message(STATUS "PYTHON_EXECUTABLE: " ${PYTHON_EXECUTABLE})
             message(STATUS "PYTHON_VERSION: " ${PYTHON_VERSION_STRING})
