--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -841,9 +841,13 @@ if(PYTHON OR PYTHON_MODULE)
                             OUTPUT_VARIABLE _VERSION
                             RESULT_VARIABLE _PYTHON_VERSION_RESULT
                             ERROR_QUIET)
-			if(NOT _PYTHON_VERSION_RESULT)
-				string(REGEX REPLACE " .*" "" PYTHON_VERSION_STRING "${_VERSION}")
-			endif()
+            if(NOT _PYTHON_VERSION_RESULT)
+                string(REGEX REPLACE " .*" "" PYTHON_VERSION_STRING "${_VERSION}")
+            endif()
+        endif()
+        if (REPLACE_PYTHON_ARCH_GA)
+            string(REGEX REPLACE "x64" "x86" PYTHON_EXECUTABLE "${PYTHON_EXECUTABLE}")
+            string(REGEX REPLACE "x64" "x86" PYTHON_LIBRARIES "${PYTHON_LIBRARIES}")
         endif()
         if (NOT PYTHON_VERSION_STRING VERSION_EQUAL PYTHONLIBS_VERSION_STRING)
             message(STATUS "PYTHON_EXECUTABLE: " ${PYTHON_EXECUTABLE})
