add python include dirs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -835,6 +835,11 @@ if(PYTHON OR PYTHON_MODULE)
         endif()
         find_package(PythonInterp ${PYTHONVERSION})
         find_package(PythonLibs ${PYTHONVERSION})
+        if (REPLACE_PYTHON_ARCH_GA)
+            string(REGEX REPLACE "x64" "x86" PYTHON_EXECUTABLE "${PYTHON_EXECUTABLE}")
+            string(REGEX REPLACE "x64" "x86" PYTHON_INCLUDE_DIRS "${PYTHON_INCLUDE_DIRS}")
+            string(REGEX REPLACE "x64" "x86" PYTHON_LIBRARIES "${PYTHON_LIBRARIES}")
+        endif()
         if (PYTHON_VERSION_STRING STREQUAL "" AND NOT PYTHON_EXECUTABLE STREQUAL "" AND MSYS)
             execute_process(COMMAND cygpath.exe -m "${PYTHON_EXECUTABLE}" OUTPUT_VARIABLE PYTHON_EXECUTABLE_CYGPATH)
             execute_process(COMMAND "${PYTHON_EXECUTABLE_CYGPATH}" -c "import sys; sys.stdout.write(sys.version)"
@@ -844,10 +849,6 @@ if(PYTHON OR PYTHON_MODULE)
             if(NOT _PYTHON_VERSION_RESULT)
                 string(REGEX REPLACE " .*" "" PYTHON_VERSION_STRING "${_VERSION}")
             endif()
-        endif()
-        if (REPLACE_PYTHON_ARCH_GA)
-            string(REGEX REPLACE "x64" "x86" PYTHON_EXECUTABLE "${PYTHON_EXECUTABLE}")
-            string(REGEX REPLACE "x64" "x86" PYTHON_LIBRARIES "${PYTHON_LIBRARIES}")
         endif()
         if (NOT PYTHON_VERSION_STRING VERSION_EQUAL PYTHONLIBS_VERSION_STRING)
             message(STATUS "PYTHON_EXECUTABLE: " ${PYTHON_EXECUTABLE})
