--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,9 @@ jobs:
         with:
           python-version: '3.x'
           architecture: x86
+      - name: Locate Python
+        id: locate-python
+        run: echo "::set-output name=python-binary::$((get-command python).Path)"
       - name: Install Numpy
         if: matrix.deps == 'full-msmpi' || matrix.deps == 'full'
         run: pip install numpy
@@ -91,6 +94,7 @@ jobs:
         shell: msys2 {0}
         run: |
           export ROOT_DIR=`cygpath ${WORKSPACE}`/..
+          export PYTHON_BINARY=${{ steps.locate-python.outputs.python-binary }}
           ${ROOT_DIR}/gdl/.ci/build_gdl_windows.msys build
       - name: Package GDL
         shell: msys2 {0}
