add missing STATUS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1113,7 +1113,7 @@ GDL output             ${GDLLOCATION}
 Installation prefix    ${CMAKE_INSTALL_PREFIX}
 C++ compiler           ${CMAKE_CXX_COMPILER} ${FLAGS}")
 if(WIN32)
-message("RC compiler           ${CMAKE_RC_COMPILER} ${FLAGS}")
+message(STATUS "RC compiler           ${CMAKE_RC_COMPILER} ${FLAGS}")
 endif(WIN32)
 message("")
 message(STATUS "Options")
