removed old slow and nonportable findfile (still used in many codes), replaced by a suitable subset of C++ file_search. Huge speed improvements expected on existing 'proven' ^)) historical codes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ set(GDLDEV OFF CACHE BOOL "GDL: Enable GDL developer mode (includes work-in-prog
 
 set(PYTHON_MODULE OFF CACHE BOOL "GDL: Build GDL as a Python module ?")
 
-set(X11 ON CACHE BOOL "GDL: Enable X11 ?") 
+set(X11 OFF CACHE BOOL "GDL: Enable X11 ?") 
 set(X11DIR "" CACHE PATH "GDL: Specify X11 directory tree")
 
 # Only GNU Readline since May 2020 (too complex to manage BSD Editline. See #754)
@@ -1021,7 +1021,6 @@ if(X11)
     if(WIN32 AND NOT CYGWIN)
         find_package(Xportmingw QUIET)
         set(HAVE_X ${XPORTMINGW_FOUND})
-        set(USE_X ${XPORTMINGW_FOUND})
         if(XPORTMINGW_FOUND)
             set(LIBRARIES ${LIBRARIES} ${XPORTMINGW_LIBRARIES})
             include_directories(${XPORTMINGW_INCLUDE_DIR})
@@ -1032,7 +1031,6 @@ if(X11)
     else(WIN32 AND NOT CYGWIN)
         find_package(X11 QUIET)
         set(HAVE_X ${X11_FOUND})
-        set(USE_X ${X11_FOUND})
         if(X11_FOUND)
             set(LIBRARIES ${LIBRARIES} ${X11_LIBRARIES})
             include_directories(${X11_INCLUDE_DIR})
